commit with clean